--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,5 +1,15 @@
 [
   {
+    "name": "AI-Translator",
+    "desc": "The AI Translator project leverages Flask and Hugging Face’s MarianMT model to provide real-time text translations between multiple languages. It features a user-friendly web interface and dynamic language support, demonstrating seamless integration of NLP models into web applications.",
+    "image": "AWScostopt",
+    "category": "AI",
+    "links": {
+      // "view": "https://www.linkedin.com/posts/mvkchaitanya_aws-cloudcomputing-costoptimization-activity-7207007068568846339-X4dJ?utm_source=share&utm_medium=member_desktop",
+      "code": "https://github.com/Iam-Deekshith/AI-Translator"
+    }
+  },
+  {
     "name": "AWS Cloud Cost Optimization",
     "desc": "Automating the identification and deletion of stale EBS snapshots to optimize AWS storage costs using AWS Lambda and Boto3.",
     "image": "AWScostopt",
@@ -36,7 +46,7 @@
     "image": "imgaws",
     "category": "AWS",
     "links": {
-      "view": "https://www.linkedin.com/in/deekshithbokka",
+      "view": "https://www.linkedin.com/in/deekshithbokka/",
       "code": "https://github.com/iam-chaitu/image-pixelater-aws-project"
     }
   },
