--- a/projects/projects.json
+++ b/projects/projects.json
@@ -3,9 +3,9 @@
     "name": "AI-Translator",
     "desc": "The AI Translator project leverages Flask and Hugging Face’s MarianMT model to provide real-time text translations between multiple languages. It features a user-friendly web interface and dynamic language support, demonstrating seamless integration of NLP models into web applications.",
     "image": "AWScostopt",
-    "category": "AI",
+    "category": "AI & ML",
     "links": {
-      // "view": "https://www.linkedin.com/posts/mvkchaitanya_aws-cloudcomputing-costoptimization-activity-7207007068568846339-X4dJ?utm_source=share&utm_medium=member_desktop",
+      "view": "https://www.linkedin.com/posts/mvkchaitanya_aws-cloudcomputing-costoptimization-activity-7207007068568846339-X4dJ?utm_source=share&utm_medium=member_desktop",
       "code": "https://github.com/Iam-Deekshith/AI-Translator"
     }
   },
